# NameSearch

./: .gitignore  LICENSE  README.md  README_desenv.md  _1-AtuPastaFontes.bat  pyproject.toml
NameSearch/: __init__.py  jg_base_iter.py  myLists.py  myNames.py  myStrings.py
teste/: tst.py
